--- a/domed_pcd.html
+++ b/domed_pcd.html
@@ -711,7 +711,9 @@
         </div>
     </footer>
     <!-- Footer END -->
-    <button class="scroltop style2 radius" type="button"><i class="fas fa-arrow-up"></i></button>
+   <button class="scroltop style2 radius" onclick="downloadPDF()">
+    <i class="fas fa-arrow-down"></i> Download PDF
+</button>
 </div>
 <!-- JAVASCRIPT FILES ========================================= -->
 <!-- JAVASCRIPT FILES ========================================= -->
