--- a/carbide.html
+++ b/carbide.html
@@ -254,44 +254,42 @@
                 <div class="row">
 					<div class="col-md-4 col-5 col-xl-4 col-lg-4 col-sm-6 footer-col-4">
                         <div class="widget widget_services border-0">
-                            <h5 class="footer-title text-white">Pages</h5>
+                            <h5 class="footer-title text-white">Products</h5>
                             <ul>
-                                <li><a href="about-2.html">About Us</a></li>
-                                <li><a href="contact-2.html">Contact Us</a></li>
+                                <li><a href="drilling.html">Drilling Tools</a></li>
+                                <li><a href="constructionandminning.html">Construction & Minning</a></li>
+								<li><a href="diamond_products.html">Diamond Products</a></li>
+
                                 <!-- <li><a href="services-1.html">Services</a></li>
                                 <li><a href="privacy-policy.html">Privacy Policy</a></li>
                                 <li><a href="portfolio-details.html">Projects </a></li> -->
                             </ul>
-                            <h5 class="footer-title text-white">Diamonds</h5>
+                            <h5 class="footer-title text-white">Technology</h5>
                             <ul>
-                                <li><a href="synthetic_diamond.html">Synthetic Diamonds</a></li>
-                                <li><a href="natural_diamond.html">Naturals Diamond</a></li>
+                                <li><a href="manufacturing_process.html">Manufacturing Process</a></li>
+                                <li><a href="reserch_development.html">Research & Development</a></li>
+								<li><a href="quality_control.html">Quality Control</a></li>
+
                             </ul>
-                            <h5 class="footer-title text-white">Diamond Powder</h5>
-                            <ul>
-                                <li><a href="synthetic_powder.html">Synthetic Powder</a></li>
-                                <li><a href="natural_powder.html">Naturals Powder</a></li>
-                            </ul>
+                           
 
                         </div>
                     </div>
 					<div class="col-md-4 col-7 col-xl-4 col-lg-4 col-sm-6 footer-col-4">
                         <div class="widget widget_services border-0">
-                            <h5 class="footer-title text-white">PCD-PDC</h5>
+                            <h5 class="footer-title text-white">Services</h5>
                             <ul>
-								<li><a href="domed_pcd.html">Domed / Round-Top- PCD </a></li>
-                                <li><a href="flat_pcd.html">Flat PCD</a></li>
-                                <li><a href="conical_pcd.html">Conical PCD</a></li>
-                                <li><a href="road_milling.html">Road Milling / Minning</a></li>
+								<li><a href="Technical_support.html">Technical Support</a></li>
+                                <li><a href="customer_support.html">Customer_Support</a></li>
+                                <li><a href="custom_manufacture.html">Custom_Manufacturing</a></li>
                             </ul>
                         </div>
                         <div class="widget widget_services border-0">
-                            <h5 class="footer-title text-white">Other Products</h5>
+                            <h5 class="footer-title text-white">About Us</h5>
                             <ul>
-								<li><a href="carbide.html">Carbide</a></li>
-                                <li><a href="niobi.html">Niobiomcan</a></li>
-                                <li><a href="Cube_for_hpht.html">Cube for HPHT</a></li>
-                                <li><a href="anvil.html">Anvil</a></li>
+								<li><a href="about-2.html">About Company</a></li>
+                                <li><a href="resources.html">Resources</a></li>
+                                <li><a href="facilities.html">facilities</a></li>
                             </ul>
                         </div>
                     </div>
