--- a/about-2.html
+++ b/about-2.html
@@ -304,7 +304,7 @@
 						<div class="col-lg-12 col-md-12">
 							<p style="color: #000000; letter-spacing: 0.5px;">Shri Navin B Parsana entered the Diamond Business individually in Bombay from 1975. He started a Diamonds manufacturing unit in Bombay and also traded in Diamonds. In 1980 he joined hands with Shri Ashwin B. Choksi who also had experience in the line of manufacturing and exporting of diamonds, both joined together and started in partnership firm "PINK STAR" for setting up a traditional method of unit for cutting and polishing of diamonds. <br><br>
 
-								Subsequently Mr. Navin B. Parsaba went to Belgium and obtained a diploma as a "DIAMOND CUTTER" in Antwerp in the field of semi automatic method of Diamond Cutting and Polishing. <br><br>
+								Subsequently Mr. Navin B. Parsana went to Belgium and obtained a diploma as a "DIAMOND CUTTER" in Antwerp in the field of semi automatic method of Diamond Cutting and Polishing. <br><br>
 								
 								In onder to achieve the objective of starting a semi automatic method of cutting and polishing unit, another partnership firm was established in the name and style of "THE DIAMOND CORPORATION" during 1984. The said firm then installed semi automatic polishing mills for manufacturing of diamonds at Virwani Industrial Estate, Goregion (E), Mumbai-400063. The entire production of polished diamonds was manufactured with the then new technology of semi automatic cutting and polishing concept by using sophisticated high tech tools like double head bruiting machines, sawing machines, Laser machine, semi automatic dops and tungs, press pots ete and exported ta various countries. <br><br>
 								
